@@ -21,18 +21,16 @@
 [%    END -%]
 [%    IF page.editing -%]
                <br>
-               <div class="container">
-                  <div class="unbounded container">
-                     <form action="[% links.req_uri %]?edit=1"
-                          enctype="application/x-www-form-urlencoded"
-                           method="post" name="edit">
-                        <textarea class="editor autosize" id="markdown-editor"
-                             name="content">[% page.content | html %]</textarea>
-                        <br>
-                        <button class="btn btn-submit" name="_method" type="submit"
-                             value="save_file">[% loc( 'Save' ) %]</button>
-                     </form>
-                  </div>
+               <div class="unbounded-x container">
+                  <form action="[% links.req_uri %]?edit=1"
+                       enctype="application/x-www-form-urlencoded"
+                        method="post" name="edit">
+                     <textarea class="editor autosize" id="markdown-editor"
+                          name="content">[% page.content | html %]</textarea>
+                     <br>
+                     <button class="btn btn-submit" name="_method" type="submit"
+                         value="save_file">[% loc( 'Save' ) %]</button>
+                  </form>
                </div>
 [%    ELSE -%]
             [% page.content | eval %]
